ISIS-3064: schema rename fixes ("isisExtSecman")

--- a/extensions/security/secman/adoc/modules/secman/pages/setting-up.adoc
+++ b/extensions/security/secman/adoc/modules/secman/pages/setting-up.adoc
@@ -100,7 +100,7 @@ Add the database schema used by the SecMan entities to the configuration file:
 isis:
   persistence:
     schema:
-      auto-create-schemas: isisExtensionsSecman
+      auto-create-schemas: isisExtSecman
 ----
 
 Optionally, modify the configuration properties for Secman itself:
