--- a/antora/components/relnotes/modules/ROOT/pages/2021/2.0.0-M5/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2021/2.0.0-M5/mignotes.adoc
@@ -270,7 +270,7 @@ CommandServiceInternal -> CommandPublisher
  HasUpdatedByAndAt
 
 | IsisInteractionFactory
-| InteractionFactory
+| InteractionService
 
 | IsisModuleJdoDataNucleus5
 | removed, use IsisModuleJdoDatanucleus instead (symmetry with JPA/IsisModuleJpaEclipselink)
